New in spot 2.7.0.dev (not yet release)

  Python:

  - The following methods of spot::bdd_dict are now usable in Python when
    fine controle over the lifetime of associations between BDD variable
    and atomic propositions is needed.
    - register_proposition(formula, for_me)
    - register_anonymous_variables(count, for_me)
    - register_all_propositions_of(other, for_me)
    - unregister_all_my_variables(for_me)
    - unregister_variable(var, for_me)

  Bugs fixed:

  - The print_dot_psl() function would incorrectly number all but the
    first children of commutative n-ary operators: in this case no
    numbering was expected.

  - std::out_of_range C++ exceptions raised from Python code are now
    converted into IndexError Python exceptions (instead of aborting
    the program).

  - The LTL parser would choke on carriage returns when command-line
    tools such as ltlfilt, ltlcross, or ltl2tgba were run on files of
    formulas with MS-DOS line endings.

  - The core translation for unambiguous automata was incorrectly
    tagging some non-weak automata as weak.

  - The product_susp() function used to multiply an automaton with a
    suspendable automaton could incorrectly build transition-based
    automata when multipliying two state-based automata.  This caused
    ltl2tgba to emit error messages such as: "automaton has
    transition-based acceptance despite prop_state_acc()==true"

New in spot 2.7 (2018-12-11)

  Command-line tools:

  - ltlsynt now has three algorithms for synthesis:
    --algo=sd     is the historical one. The automaton of the formula
                  is split to separate inputs and outputs, then
                  determinized (with Safra construction).
    --algo=ds     the automaton of the formula is determinized (Safra),
                  then split to separate inputs and outputs.
    --algo=lar    translate the formula to a deterministic automaton
                  with an arbitrary acceptance condition, then turn it